fix JWT protection to endpoints
